--- a/mytwitter/templates/registration/signup.html
+++ b/mytwitter/templates/registration/signup.html
@@ -1,35 +1,36 @@
 <style type ="text/css">
-.create {
-	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) );
-	background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5');
-	background-color:#79bbff;
+.mybutton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
+	box-shadow:inset 0px 1px 0px 0px #f29c93;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100) );
+	background:-moz-linear-gradient( center top, #fe1a00 5%, #ce0100 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100');
+	background-color:#fe1a00;
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
 	border-radius:6px;
-	border:1px solid #84bbf3;
+	border:1px solid #d83526;
 	display:inline-block;
 	color:#ffffff;
 	font-family:arial;
 	font-size:13px;
 	font-weight:bold;
-	padding:6px 14px;
+	padding:6px 12px;
 	text-decoration:none;
-	text-shadow:1px 1px 0px #528ecc;
+	text-shadow:1px 1px 0px #b23e35;
 }
-.create:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
-	background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
-	background-color:#378de5;
+.mybutton:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00) );
+	background:-moz-linear-gradient( center top, #ce0100 5%, #fe1a00 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00');
+	background-color:#ce0100;
 }
-.create:active {
+.mybutton:active {
 	position:relative;
 	top:1px;
 }
+
 input {
     border: 1px solid #006;
     background: #ffc;
@@ -50,14 +51,15 @@ body {
 
 
 </style>
-<html><<title>Sign Up:create new account</title><body>
+<html><title>Sign Up:create new account</title><body><br>
 <center><form method ="POST" action="/account/create">
 <label>Username</label><br>
-<input type="text" name="username"><br>
+<input type="text" name="username" id="username" maxlength="25" required="true"><br>
 <label>Password</label><br>
-<input type="password" name="password"><br><br>
-<input class ="create" type=submit value="Create Account">
-
+<input type="password" name="password" id="password" required="true"><br><br>
+<input id ="create" class ="mybutton" type=submit value="Create Account">
+<a href="/account/login" class="mybutton">Cancel</a>
 </form>
-</center></body>
+</center>
+</body>
 </html>
