--- a/mytwitter/templates/registration/signup.html
+++ b/mytwitter/templates/registration/signup.html
@@ -56,7 +56,7 @@ body {
 <html><title>Sign Up:create new account</title><body><br>
 <center><form method ="POST" action="/account/create">{{message}}<br>
 <label>Username</label><br>
-<input type="text" name="username" id="username" maxlength="25" required="true"><br>
+<input type="text" name="username" id="username" maxlength="25" required="true" pattern="[A-Za-z0-9]*"><br>
 <label>Password</label><br>
 <input type="password" name="password" id="password" required="true"><br><br>
 <input id ="create" class ="mybutton" type=submit value="Create Account">
