--- a/mytwitter/templates/registration/following.html
+++ b/mytwitter/templates/registration/following.html
@@ -230,7 +230,7 @@ margin-left:10px;
 </style>
 
 
-<title>My twitter:Home</title><h1>Hai {{ user }},<a href="/account/logout" class="mybutton space" id="signout">Sign out</a><a href="/" class="mybutton space" id="home">Home</a><h1>
+<title>My twitter:Followers</title><h1>Hai {{ user }},<a href="/account/logout" class="mybutton space" id="signout">Sign out</a><a href="/" class="mybutton space" id="home">Home</a><h1>
 <u1 class = "post_table">
 {% if entries %}
 <table>
